--- a/css/styles.css
+++ b/css/styles.css
@@ -60,3 +60,10 @@ body {
     left: 0;
     min-height: 300px;
 }
+
+#carouselButton {
+    right: 0px;
+    bottom: 0px;
+    position: absolute;
+    z-index: 1;
+}
